Archive2/f3/d0f30d235f1b56/output
g++ (GCC) 4.9.0
Copyright (C) 2014 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

main.cpp: In function 'int main()':
main.cpp:5:18: error: invalid conversion from 'void (*)()' to 'int (*)()' [-fpermissive]
     int (*p)() = f;
                  ^
