Archive2/f3/d0f30d235f1b56/main.cpp
void f() {}

int main()
{
    int (*p)() = f;
    (void)p;
}